--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head></head>
+<head>
+  <meta charset="utf-8">
+  <title>Styles Conference</title>
+</head>
 
 <body></body>
 
