Add a headline and summary of styles conference

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Styles Conference</title>
 </head>
 
-<body></body>
+<body>
+  <h1>Styles Conference</h1>
+  <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
+    technologies. Join us this August!</p>
+</body>
 
 </html>
