--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Styles Conference</title>
+  <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
 
 <body>
