--- a/index.html
+++ b/index.html
@@ -8,9 +8,33 @@
 </head>
 
 <body>
-  <h1>Styles Conference</h1>
-  <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
-    technologies. Join us this August!</p>
+  <header>
+    <h1>Styles Conference</h1>
+    <h3>August 24&ndash;26th&mdash; Chicago, IL</h3>
+  </header>
+  <section>
+    <h2>Dedcated to the Craft of Building Websites</h2>
+    <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
+      technologies. Join us this August!</p>
+  </section>
+  <section>
+    <section>
+      <h5>Speakers</h5>
+      <h3>World-Class Speakers</h3>
+      <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories</p>
+    </section>
+    <section>
+      <h5>Schedule</h5>
+      <h3>Three Inspiring Days</h3>
+      <p>Enjoy three inspiring and action-packed days of talks, gatherings, adn all-around good times.</p>
+    </section>
+    <section>
+      <h5>Venue</h5>
+      <h3>The Chicago Theater</h3>
+      <p>Within the heart of Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+    </section>
+  </section>
+  <footer><small>&copy; Styles Conference</small></footer>
 </body>
 
 </html>
